--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Meta Description -->
+  <meta name="description" content="AI-Driven GameFi Governed by You">
+
+  <!-- Meta Keywords -->
+  <meta name="keywords" content="lucidia, crypto, ai, gamefi, game, nft">
+
+  <!-- Meta Author -->
+  <meta name="author" content="Lucidia">
+
+  <!-- Open Graph Metadata (for social media sharing) -->
+  <meta property="og:title" content="Lucidia">
+  <meta property="og:description" content="AI-Driven GameFi Governed by You">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://i.imgur.com/35MV4wn_d.webp?maxwidth=760&fidelity=grand">
+
+  <!-- Twitter Card Metadata (for Twitter sharing) -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Lucidia">
+  <meta name="twitter:description" content="AI-Driven GameFi Governed by You">
+  <meta name="twitter:image" content="https://i.imgur.com/35MV4wn_d.webp?maxwidth=760&fidelity=grand">
+
   <title>LUCIDIA</title>
 </head>
 
