--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Meta Description -->
-  <meta name="description" content="AI-Driven GameFi Governed by You">
+  <meta name="description" content="We are not looking to reinvent the wheel of Gamification and game plots - just to give you the power and ownership over what you have already been doing for years.
+  ">
 
   <!-- Meta Keywords -->
   <meta name="keywords" content="lucidia, crypto, ai, gamefi, game, nft">
@@ -20,14 +21,16 @@
 
   <!-- Open Graph Metadata (for social media sharing) -->
   <meta property="og:title" content="Lucidia">
-  <meta property="og:description" content="AI-Driven GameFi Governed by You">
+  <meta property="og:description" content="We are not looking to reinvent the wheel of Gamification and game plots - just to give you the power and ownership over what you have already been doing for years.
+  ">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://i.imgur.com/35MV4wn_d.webp?maxwidth=760&fidelity=grand">
 
   <!-- Twitter Card Metadata (for Twitter sharing) -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Lucidia">
-  <meta name="twitter:description" content="AI-Driven GameFi Governed by You">
+  <meta name="twitter:description" content="We are not looking to reinvent the wheel of Gamification and game plots - just to give you the power and ownership over what you have already been doing for years.
+  ">
   <meta name="twitter:image" content="https://i.imgur.com/35MV4wn_d.webp?maxwidth=760&fidelity=grand">
 
   <title>LUCIDIA</title>
